force-app/main/default/objects/Solicitud_de_Oferta__c/fields/CodigoTarea__c.field-meta.xml
<CustomField>
    <fullName>CodigoTarea__c</fullName>
    <label>Código</label>
    <length>25</length>
    <type>Text</type>
</CustomField>