force-app/main/default/objects/Solicitud_de_Oferta__c/fields/Correlativo__c.field-meta.xml
<CustomField>
    <fullName>Correlativo__c</fullName>
    <label>Correlativo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>