force-app/main/default/objects/Solicitud_de_Oferta__c/fields/Descripcion_producto__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_producto__c</fullName>
    <label>Descripción (producto)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>