force-app/main/default/objects/Solicitud_de_Oferta__c/fields/Fecha_de_Creacion_SO__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Creacion_SO__c</fullName>
    <label>Fecha de Creacion SO</label>
    <type>DateTime</type>
</CustomField>