force-app/main/default/objects/Solicitud_de_Oferta__c/fields/Fecha_de_Entrega_Product__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Entrega_Product__c</fullName>
    <label>Fecha de Entrega (Producto)</label>
    <length>15</length>
    <type>Text</type>
</CustomField>