force-app/main/default/objects/Solicitud_de_Oferta__c/fields/Fecha_de_entrega_producto__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_entrega_producto__c</fullName>
    <label>Fecha de entrega (producto)</label>
    <type>Date</type>
</CustomField>