force-app/main/default/objects/Solicitud_de_Oferta__c/fields/Fecha_de_entrega_propuesta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_entrega_propuesta__c</fullName>
    <label>Fecha  de entrega (propuesta)</label>
    <type>Date</type>
</CustomField>