force-app/main/default/objects/Solicitud_de_Oferta__c/fields/Fecha_Hora_aprobaci_n_o_rechazo_SO__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Hora_aprobaci_n_o_rechazo_SO__c</fullName>
    <label>Fecha / Hora aprobación o rechazo SO</label>
    <type>DateTime</type>
</CustomField>