force-app/main/default/objects/Solicitud_de_Oferta__c/fields/Fecha_Hora_Asignaci_n_SO__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Hora_Asignaci_n_SO__c</fullName>
    <label>Fecha / Hora Asignación SO</label>
    <type>DateTime</type>
</CustomField>