force-app/main/default/objects/Solicitud_de_Oferta__c/fields/ltima_SO_rechazada_por__c.field-meta.xml
<CustomField>
    <fullName>ltima_SO_rechazada_por__c</fullName>
    <label>Última SO rechazada por</label>
    <length>255</length>
    <type>Text</type>
</CustomField>