force-app/main/default/objects/Solicitud_de_Oferta__c/fields/Motivo_de_rechazo__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_rechazo__c</fullName>
    <label>Motivo de rechazo</label>
    <type>TextArea</type>
</CustomField>