force-app/main/default/objects/Solicitud_de_Oferta__c/fields/Nombre_de_la_cuenta__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_la_cuenta__c</fullName>
    <formula>opportunity__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de la cuenta</label>
    <type>Text</type>
</CustomField>