force-app/main/default/objects/Solicitud_de_Oferta__c/fields/Oportunidad_tiene_SO_rechazadas__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_tiene_SO_rechazadas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oportunidad tiene SO rechazadas</label>
    <type>Checkbox</type>
</CustomField>