force-app/main/default/objects/Solicitud_de_Oferta__c/fields/opportunity__c.field-meta.xml
<CustomField>
    <fullName>opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Solicitudes de Oferta</relationshipLabel>
    <relationshipName>Solicitudes_de_Oferta</relationshipName>
    <type>Lookup</type>
</CustomField>