force-app/main/default/objects/Solicitud_de_Oferta__c/fields/Presupuesto_de_cliente__c.field-meta.xml
<CustomField>
    <fullName>Presupuesto_de_cliente__c</fullName>
    <label>Presupuesto de cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>