force-app/main/default/objects/Solicitud_de_Oferta__c/fields/Principales_competidores__c.field-meta.xml
<CustomField>
    <fullName>Principales_competidores__c</fullName>
    <label>Principales competidores</label>
    <length>255</length>
    <type>Text</type>
</CustomField>