force-app/main/default/objects/Solicitud_de_Oferta__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente de Asignación</fullName>
            </value>
            <value>
                <fullName>Asignado</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
                <label>Contestado</label>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>