force-app/main/default/objects/Solicitud_de_Oferta__c/fields/Tarea_creaci_n_de_c_digo__c.field-meta.xml
<CustomField>
    <fullName>Tarea_creaci_n_de_c_digo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tarea creación de código</label>
    <referenceTo>Tarea_creacion_de_codigo__c</referenceTo>
    <relationshipLabel>Solicitudes de Oferta</relationshipLabel>
    <relationshipName>Solicitudes_de_Oferta</relationshipName>
    <type>Lookup</type>
</CustomField>